# server/validationSchema/auth-schema.js
@@ -71,7 +71,7 @@ const emailVerificationValidation = async (req, res, next) => {
   }
 };
 
-const resendEmailVerification = async (req, res, next) => {
+const emailValidation = async (req, res, next) => {
   try {
     validateReqWithSchema(req, res, next, {
       email: Joi.string().email().required().label("Email"),
@@ -81,10 +81,36 @@ const resendEmailVerification = async (req, res, next) => {
   }
 };
 
+const resetPasswordValidation = async (req, res, next) => {
+  try {
+    const schema = Joi.object({
+      token: Joi.string().required().label("Token"),
+      new_password: Joi.string().min(8).required().label("New Password"),
+      confirm_password: Joi.ref("new_password"),
+    }).with("new_password", "confirm_password");
+
+    const { value, error } = schema.validate(req.body);
+
+    if (error !== undefined) {
+      return sendResponse(res, false, 422, "Validations Error", {
+        message: error?.details[0]?.message,
+        field: error?.details[0]?.context?.key,
+      });
+    }
+
+    // set the variable in the request for validated data
+    req.validated = value;
+    next();
+  } catch (error) {
+    next(error);
+  }
+};
+
 module.exports = {
   loginValidation,
   registerValidation,
   refreshTokenValidation,
-  resendEmailVerification,
+  emailValidation,
   emailVerificationValidation,
+  resetPasswordValidation,
 };
